Code Base/objects/SubAssembly__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Make_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Make/Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sub Assembly</relationshipLabel>
        <relationshipName>Sub_Assembly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubAssemblyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SubAssembly ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubAssemblyURL__c</fullName>
        <label>Sub Assembly URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <formula>Make_Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>for making field &apos;name&apos; unique.</description>
        <label>UniqueName</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sub Assembly</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubAssemblyID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Assembly</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>